--- a/week-9/typescript/package.json
+++ b/week-9/typescript/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.21"
+    "@types/express": "^4.17.21",
+    "@types/react": "^18.2.60",
+    "react": "^18.2.0"
   }
 }
